add: GetbyID and Post
